--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -1,10 +1,9 @@
-# Imagen base optimizada
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
 # Copiar archivos de configuración
-COPY package.json package-lock.json ./
+COPY package.json package-lock.json tsconfig.json ./
 
 # Instalar dependencias solo para producción
 RUN npm ci --omit=dev
@@ -15,7 +14,7 @@ COPY . .
 # Compilar el código TypeScript
 RUN npm run build
 
-# ---- Segunda fase para reducir tamaño ----
+# ---- Segunda fase: Runtime ----
 FROM node:20-alpine
 
 WORKDIR /app
@@ -23,13 +22,20 @@ WORKDIR /app
 # Copiar solo lo necesario desde la fase anterior
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
-COPY package.json ./
+COPY --from=builder /app/package.json ./  
+COPY --from=builder /app/tsconfig.json ./ 
+COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/.env ./
 
 # Definir variables de entorno
 ENV NODE_ENV=production
 
+RUN npx prisma generate
 # Exponer el puerto
 EXPOSE 3000
 
-# Comando de inicio
-CMD ["node", "dist/main.js"]
+# Compila la aplicación
+RUN npm run build
+
+# Comando para iniciar la aplicación
+CMD ["npm", "run", "start"]
