--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.4",
     "gsap": "^3.12.7",
+    "lucide": "^0.509.0",
     "lucide-react": "^0.508.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -43,7 +44,8 @@
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
