BACK: routes are protected, now using hooks in forms and cookies not localstorage.

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.4",
     "gsap": "^3.12.7",
+    "js-cookie": "^3.0.5",
     "lucide": "^0.509.0",
     "lucide-react": "^0.508.0",
     "react": "^19.0.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
