--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,15 +16,20 @@
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.0.15",
+    "@tremor/react": "^3.18.7",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "lucide": "^0.509.0",
     "lucide-react": "^0.508.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
