doing changes on backend for deployment.

--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -3,14 +3,15 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 
 # Copiar archivos de configuración
-COPY package.json package-lock.json tsconfig.json ./
+COPY package.json package-lock.json ./
 
-# Instalar dependencias solo para producción
-RUN npm ci --omit=dev
+# Instalar todas las dependencias (incluyendo devDependencies)
+RUN npm ci 
 
 # Copiar el código fuente
 COPY . .
 
+RUN npx prisma generate
 # Compilar el código TypeScript
 RUN npm run build
 
@@ -19,23 +20,25 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copiar solo lo necesario desde la fase anterior
-COPY --from=builder /app/node_modules ./node_modules
+# Copiar package.json para instalar dependencias de producción
+COPY package.json package-lock.json ./
+
+# Instalar solo dependencias de producción
+RUN npm ci --only=production
+
+# Copiar archivos compilados desde la fase anterior
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/package.json ./  
-COPY --from=builder /app/tsconfig.json ./ 
 COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/.env ./
+
+# Generar cliente de Prisma en runtime
+RUN npx prisma generate
 
 # Definir variables de entorno
 ENV NODE_ENV=production
 
-RUN npx prisma generate
 # Exponer el puerto
 EXPOSE 3000
 
-# Compila la aplicación
-RUN npm run build
-
 # Comando para iniciar la aplicación
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start:prod"]
