--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:user-stats": "ts-node src/scripts/migrate-user-stats.ts"
+    "migrate:user-stats": "ts-node src/scripts/migrate-user-stats.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
