--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,14 +12,16 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migrate:deploy": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "postinstall": "prisma generate",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:user-stats": "ts-node src/scripts/migrate-user-stats.ts",
-    "postinstall": "prisma generate"
+    "migrate:user-stats": "ts-node src/scripts/migrate-user-stats.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
