--- a/BackEnd/render.yaml
+++ b/BackEnd/render.yaml
@@ -8,6 +8,10 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-        -key: PORT 
+      - key: PORT
         value: '10000'
+      - key: DATABASE_URL
+        fromDatabase:
+          name: atenea-db
+          property: connectionString
     ipAllowList: []
