Render: accepting commentary on startCommand to se the mistakes.

--- a/BackEnd/render.yaml
+++ b/BackEnd/render.yaml
@@ -3,7 +3,7 @@ services:
     name: atenea-backend
     env: node
     buildCommand: npm ci && npm install && npm run build
-    startCommand: npx prisma db push --accept-data-loss && npm run start:prod
+    startCommand: echo "DATABASE_URL=$DATABASE_URL" && npx prisma db push --accept-data-loss --verbose && npm run start:prod
     healthCheckPath: /
     envVars:
       - key: NODE_ENV
